--- a/index.html
+++ b/index.html
@@ -273,9 +273,8 @@ Social Network based recommendation system for last.fm
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-	
-	<a href="https://github.com/shailahirji" target="_blank"><img src="fa fa-github w3-hover-opacity" /></a>
-  <a href class="https://github.com/shailahirji"
+
+  <a href ="https://github.com/shailahirji"
     <i class="fa fa-github w3-hover-opacity"></i> 
   </a>
   <a href class="www.linkedin.com/in/shaila-hirji-443505b0">
