--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@ Social Network based recommendation system for last.fm
   <p>Find me on social media.</p>
 
   <a href ="https://github.com/shailahirji"
-    <i class="fa fa-github w3-hover-opacity"></i> 
+    img src="fa fa-github w3-hover-opacity">
   </a>
-  <a href class="www.linkedin.com/in/shaila-hirji-443505b0">
+  <a href ="www.linkedin.com/in/shaila-hirji-443505b0">
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </a>
  
