--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Social Network based recommendation system for last.fm
     img src="fa fa-github w3-hover-opacity">
   </a>
   <a href ="www.linkedin.com/in/shaila-hirji-443505b0">
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <img src="fa fa-linkedin w3-hover-opacity">
   </a>
  
   <!--<p>Powered by <a target="_blank">Shaila Hirji</a></p> -->
