--- a/index.html
+++ b/index.html
@@ -274,13 +274,18 @@ Social Network based recommendation system for last.fm
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
 
+<!--   <a href ="https://github.com/shailahirji"
+    img src="fa fa-github w3-hover-opacity">
+  </a>
+  <a href ="www.linkedin.com/in/shaila-hirji-443505b0"
+    img src="fa fa-linkedin w3-hover-opacity">
+  </a> -->
   <a href ="https://github.com/shailahirji"
     img src="fa fa-github w3-hover-opacity">
   </a>
-<!--   <a href ="www.linkedin.com/in/shaila-hirji-443505b0"
-    img src="fa fa-linkedin w3-hover-opacity">
-  </a> -->
- 
+  <a href ="www.linkedin.com/in/shaila-hirji-443505b0">
+    <img src="fa fa-linkedin w3-hover-opacity">
+  </a> 
   <!--<p>Powered by <a target="_blank">Shaila Hirji</a></p> -->
 </footer>
 
