--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ Social Network based recommendation system for last.fm
     img src="fa fa-linkedin w3-hover-opacity">
   </a> -->
   <a href ="https://github.com/shailahirji"
-    img src="fa fa-github w3-hover-opacity">
+    img src="fa fa-github w3-hover-opacity"
   </a>
   <a href ="www.linkedin.com/in/shaila-hirji-443505b0">
     <img src="fa fa-linkedin w3-hover-opacity">
