--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@ Social Network based recommendation system for last.fm
   <a href ="https://github.com/shailahirji"
     img src="fa fa-github w3-hover-opacity"
   </a>
-  <a href ="www.linkedin.com/in/shaila-hirji-443505b0">
+<!--   <a href ="www.linkedin.com/in/shaila-hirji-443505b0">
     <img src="fa fa-linkedin w3-hover-opacity">
-  </a>
+  </a> -->
   <!--<p>Powered by <a target="_blank">Shaila Hirji</a></p> -->
 </footer>
 
