--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@ Social Network based recommendation system for last.fm
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
 
-<a href="https://github.com/shailahirji">
+<a href="https://github.com/shailahirji"
     <i class="fa fa-github w3-hover-opacity"></i> 
   </a>
-  <a href="www.linkedin.com/in/shaila-hirji-443505b0">
+  <a href="www.linkedin.com/in/shaila-hirji-443505b0"
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </a>
   <!--<p>Powered by <a target="_blank">Shaila Hirji</a></p> -->
