--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@ Social Network based recommendation system for last.fm
 <a href="https://github.com/shailahirji"
     <i class="fa fa-github w3-hover-opacity"></i> 
   </a>
-<!--   <a href="http://linkedin.com/in/shaila-hirji-443505b0"
+  <a href="http://linkedin.com/in/shaila-hirji-443505b0"
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </a> -->
+  </a>
   <!--<p>Powered by <a target="_blank">Shaila Hirji</a></p> -->
 </footer>
 
