--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <li>Designed and documented coding handouts for participants and a game board template to run the complete Microbit </li>
           </p>
         </div>
+	    
+	     <h5 class="w3-opacity"><b>Commercial Website, Tanzania 	</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Current</span></h6> </h6>
+          <p><li>Designed and developed an Online platform for an upcoming florist in Tanzania </li>
+              <li>Used HTML and CSS to design webpage and used Wix for hosting and payment configuration </li>
+		  <li><a href="www.bloomtz.com" Visit Bloom.tz </a> </li>
+          </p>
+        </div>
+	    
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Media and Technology, Arabic Student Club, Bellevue College	</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - Jan 2016</h6>
