--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Summer 2018</span></h6> </h6>
           <p><li>Designed and developed an Online platform for an upcoming florist in Tanzania </li>
               <li>Used HTML and CSS to design webpage and used Wix for hosting and payment configuration </li>
-		 <a href="http://linkedin.com/in/shaila-hirji-443505b0"
+		 <a href="www.bloomtz.com"
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </a>
           </p>
