--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
 	    <div class="w3-container">
 	     <h5 class="w3-opacity"><b>Commercial Website, Tanzania 	</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Summer 2018</span></h6> </h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2018</h6> </h6>
           <p><li>Designed and developed an Online platform for an upcoming florist in Tanzania </li>
               <li>Used HTML and CSS to design webpage and used Wix for hosting and payment configuration </li>
-		   <a href="https://www.bloomtz.com/"
-    <i class="fa fa-external-link-square" aria-hidden="true"></i>		
+		<li><a href="https://www.bloomtz.com/"
+		       <i class="fa fa-external-link-square" aria-hidden="true"></i></li>		
   </a>
 	
           </p>
