--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
 	    <div class="w3-container">
 	     <h5 class="w3-opacity"><b>Commercial Website, Tanzania 	</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2018 </h6><a href="https://www.bloomtz.com/"
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2018 <a href="https://www.bloomtz.com/"
 		       <i class="fa fa-external-link-square" aria-hidden="true"></i>		
-  </a>  </h6>
+  </a> </h6> </h6>
           <p><li>Designed and developed an Online platform for an upcoming florist in Tanzania </li>
               <li>Used HTML and CSS to design webpage and used Wix for hosting and payment configuration </li>
 	
