--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>The Photokeeper</b></h5>
+          <h5 class="w3-opacity"><b>The Photokeeper <a href="http://www.thephotokeeper.wixsite.com/thephotokeeper"
+		       <i class="fa fa-external-link-square" aria-hidden="true"></i>		
+  </a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2013 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p><li>	Owner/Operator of Professional Photography Company, based in Tanzania that averaged a $5000 monthly revenue</li>
             <li>Take professional photographs for weddings, parties, cooperate events and portraits </li>
@@ -152,10 +154,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </p>
         </div>
 	    <div class="w3-container">
-	     <h5 class="w3-opacity"><b>Commercial Website, Tanzania 	</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2018 <a href="https://www.bloomtz.com/"
+	     <h5 class="w3-opacity"><b>Commercial Website, Tanzania <a href="https://www.bloomtz.com/"
 		       <i class="fa fa-external-link-square" aria-hidden="true"></i>		
-  </a> </h6> </h6>
+  </a>	</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2018 </h6> </h6>
           <p><li>Designed and developed an Online platform for an upcoming florist in Tanzania </li>
               <li>Used HTML and CSS to design webpage and used Wix for hosting and payment configuration </li>
 	
