--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><li>	Owner/Operator of Professional Photography Company, based in Tanzania that averaged a $5000 monthly revenue</li>
             <li>Take professional photographs for weddings, parties, cooperate events and portraits </li>
 <li>Maintain high level of client satisfaction by delivering on time and ensuring all client requirements are met</li>
-<li>	Develop, design and maintain business website using Wix. http://thephotokeeper.wixsite.com/thephotokeeper</li>
+<li>	Develop, design and maintain business website using Wix.</li>
           </p>
           
         </div>
