--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@ Social Network based recommendation system for last.fm
                 <p><li>Database for an online textbook exchange platform using MySql</li>
 <li>	User-friendly interface was developed using PHP and bootstrap</li>
 			<li> View demos <a href="https://drive.google.com/file/d/1srwxHSzt-P_2QlFEw5C3oQNjfo0TXbp2/view"
-		       <i class="fa fa-video-camera" aria-hidden="true"></i> <a href="https://drive.google.com/open?id=1n8KFr9P9TgK7lJl-9yUcTbOI9SSctyC_"
-		       <i class="fa fa-video-camera" aria-hidden="true"></i></li>
+					   <i class="fa fa-video-camera" aria-hidden="true"></i></a> <a href="https://drive.google.com/open?id=1n8KFr9P9TgK7lJl-9yUcTbOI9SSctyC_"
+										<i class="fa fa-video-camera" aria-hidden="true"></i></a></li>
           
           <hr>
         </div>
