--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
           </div>
           
-          <p>PHP/Lisp/Haskell/RegexAPI</p>
+          <p>PHP/Lisp/Haskell</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
@@ -117,7 +117,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Bellevue College</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Expected Graduation-June 2019</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Expected Graduation-2019</h6>
           <p>Bachelors of Science in Computer Science	GPA: 3.91</p>
 
       <p>Selected Coursework: Fundamentals of Computer Science (Java), Data Structures (C++), Database Systems, Programming Languages       (Java, Python, Lisp, Haskel), Computer Architecture (C and ARM assembly), Algorithms (Java), Software Engineering, Calculus I-IV, Linear  Algebra, Discrete Math, Probability and Statistical model 
