--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
 		 <h5 class="w3-opacity"><b>Student Advisory Board, Bellevue College </b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Fall 2017- Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fall 2017- <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p><li>Member</li>
           
           <hr>
