--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
           </div>
+		
+		 <p>R</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+          </div>
           
           <p>PHP/Lisp/Haskell/RegexAPI</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
