--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Course: CS 341 Computer Networking		
             </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
-                      <p>Road Trip Advisor</p>
-                      <p>The Road Trip Advisor web application will help people plan amazing road trips. After entering a starting and destination point, the web application will suggest a couple of road trip alternatives overlayed with different restaurant, hotels and activities options optimized with user preferences. 
-                 
-            </p>
+                      <p>Directory Listing</p>
+                      <p>This program creates a web directory treating webroot as the source directory.It handles GET and HEAD requests and responds with HTTP 1.1 response headers. 
+                          When GET request is made, the body of the object is part of the response. If request is HEAD, only the main header fields are returned with no body.  
+                          The program handles 404 errors for when a page that doesn't exist is requested for. </p>
 
             <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
               </b></h5>
