--- a/index.html
+++ b/index.html
@@ -190,6 +190,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                         <li> When GET request is made, the body of the object is part of the response. If request is HEAD, only the main header fields are returned with no body.</li>
                         <li>The program handles 404 errors for when a page that doesn't exist is requested for. </li> </p>
 
+
+                        <h5 class="w3-opacity"><b>Course: CS 341 Computer Networking		
+                          </b></h5>
+                            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
+                                    <p>UDP Client-Server</p>
+                                    <p><li>This program creates a web directory treating webroot as the source directory. </li>
+                                      <li>It handles GET and HEAD requests and responds with HTTP 1.1 response headers.  </li>
+                                      <li> When GET request is made, the body of the object is part of the response. If request is HEAD, only the main header fields are returned with no body.</li>
+                                      <li>The program handles 404 errors for when a page that doesn't exist is requested for. </li> </p>
+
+
             <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
               </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
