--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
               </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
-                        <p>Road Trip Advisor</p>
-                        <p>The Road Trip Advisor web application will help people plan amazing road trips. After entering a starting and destination point, the web application will suggest a couple of road trip alternatives overlayed with different restaurant, hotels and activities options optimized with user preferences. 
-                   
-              </p>
+                        <p>Decision Tree Learning System to Evaluate Loan Applicants</p>
+                        <p><li>Built a decision tree using historical data of bank loans applicants provided by a German bank </li>
+                          <li>The “default” class label can be “yes” or “no” where a “yes” indicates that the customer defaulted on the loan,
+                              and a “no” indicates that the customer did not default on the loan.</li></p>
 
 
           <h5 class="w3-opacity"><b>Course: CS 481 Senior Capstone		
