--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                           <li>The “default” class label can be “yes” or “no” where a “yes” indicates that the customer defaulted on the loan,
                               and a “no” indicates that the customer did not default on the loan.</li></p>
 
+             <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
+              </b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
+                        <p>Artificial Nueral Network to recognize Handwritten digits </p>
+                        <p><li> Using the Backpropagation algorithm build and train
+                            an Artificial Neural Network (ANN) classifier that recognizes images of hand-written digits (0-9).</li></p>
 
           <h5 class="w3-opacity"><b>Course: CS 481 Senior Capstone		
 </b></h5>
