--- a/index.html
+++ b/index.html
@@ -204,15 +204,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
                         <p>Decision Tree Learning System to Evaluate Loan Applicants</p>
                         <p><li>Built a decision tree using historical data of bank loans applicants provided by a German bank </li>
-                          <li>The “default” class label can be “yes” or “no” where a “yes” indicates that the customer defaulted on the loan,
-                              and a “no” indicates that the customer did not default on the loan.</li></p>
+                          <li>Use the model to determine whether a given loan defaulted or not. </li>
+                          <li>Model had 75% accuracy. </li></p>
 
              <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
               </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
                         <p>Artificial Nueral Network to recognize Handwritten digits </p>
                         <p><li> Using the Backpropagation algorithm build and train
-                            an Artificial Neural Network (ANN) classifier that recognizes images of hand-written digits (0-9).</li></p>
+                            an Artificial Neural Network (ANN) classifier that recognizes images of hand-written digits (0-9).</li>
+                          <li>Model yielded 92% accuracy</li></p>
 
           <h5 class="w3-opacity"><b>Course: CS 481 Senior Capstone		
 </b></h5>
