--- a/index.html
+++ b/index.html
@@ -131,6 +131,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
         
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+
+        <div class="w3-container">
+            <h5 class="w3-opacity"><b>Evam Streaming Analytics<a href="http://www.thephotokeeper.wixsite.com/thephotokeeper"
+             <i class="fa fa-external-link-square" aria-hidden="true"></i>		
+    </a></b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>October 2018 - January 2019</h6>
+            <p><li>Software Developer</li>
+             <li>Developed C tasks on NBIoT prototype sensor devices running on FreeRTOS. </li>
+             <li>Configured real time sensor data to log on to AWS server and publish to company’s online console. </li>
+                <li>Researched and presented innovative prototype ideas.  </li>
+
+            </p>
+            
+          </div>
+
         <div class="w3-container">
           <h5 class="w3-opacity"><b>The Photokeeper <a href="http://www.thephotokeeper.wixsite.com/thephotokeeper"
 		       <i class="fa fa-external-link-square" aria-hidden="true"></i>		
