--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
      
                <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-laptop fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Project  Experience</h2>
        <div class="w3-container">
-
+       
+        <div class="w3-container">
           <h5 class="w3-opacity"><b>Course: CS 341 Computer Networking		
             </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
@@ -205,7 +206,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                         <li> When GET request is made, the body of the object is part of the response. If request is HEAD, only the main header fields are returned with no body.</li>
                         <li>The program handles 404 errors for when a page that doesn't exist is requested for. </li> </p>
 
-
+                      </div>
+                      <div class="w3-container">
                         <h5 class="w3-opacity"><b>Course: CS 341 Computer Networking		
                           </b></h5>
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
@@ -213,7 +215,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                                     <p><li>Created an application layer protocol that uses UDP as the transport layer protocol for a server that receives simple math operations, 
                                       executes the operations, and prints the result to the screen.</li></p>
 
-
+                                    </div>
+                                    <div class="w3-container">
             <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
               </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
@@ -221,7 +224,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                         <p><li>Built a decision tree using historical data of bank loans applicants provided by a German bank </li>
                           <li>Use the model to determine whether a given loan defaulted or not. </li>
                           <li>Model had 75% accuracy. </li></p>
-
+                        </div>
+                        <div class="w3-container">
              <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
               </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
@@ -229,7 +233,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                         <p><li> Using the Backpropagation algorithm build and train
                             an Artificial Neural Network (ANN) classifier that recognizes images of hand-written digits (0-9).</li>
                           <li>Model yielded 92% accuracy</li></p>
-
+                        </div>
+   <div class="w3-container">
           <h5 class="w3-opacity"><b>Course: CS 481 Senior Capstone		
 </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
