--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ Social Network based recommendation system for last.fm
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <a href class="link"= "https://github.com/shailahirji">
+  <a href class="https://github.com/shailahirji">
     <i class="fa fa-github w3-hover-opacity"></i> 
   </a>
   <a href class="link"= "www.linkedin.com/in/shaila-hirji-443505b0">
