--- a/index.html
+++ b/index.html
@@ -363,8 +363,11 @@ Social Network based recommendation system for last.fm
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <a href class="https://github.com/shailahirji">
-    <i class="fa fa-github w3-hover-opacity"></i> 
+	<a href="http://www.thephotokeeper.wixsite.com/thephotokeeper"
+		       <i class="fa fa-external-link-square" aria-hidden="true"></i>		
+  </a>
+  <a href class="https://github.com/shailahirji"
+    <i class="fa fa-github w3-hover-opacity" aria-hidden="true"></i> 
   </a>
   <a href class="link"= "www.linkedin.com/in/shaila-hirji-443505b0">
     <i class="fa fa-linkedin w3-hover-opacity"></i>
