--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
        <div class="w3-container">
        
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Course: CS 341 Computer Networking		
+          <h5 class="w3-opacity"><b>Course: CS 341 Computer Networking, Bellevue College			
             </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
                       <p>Directory Listing</p>
@@ -210,7 +210,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                         <hr>
                       </div>
                       <div class="w3-container">
-                        <h5 class="w3-opacity"><b>Course: CS 341 Computer Networking		
+                        <h5 class="w3-opacity"><b>Course: CS 341 Computer Networking, Bellevue College		
                           </b></h5>
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
                                     <p>UDP Client-Server</p>
@@ -219,7 +219,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                                       <hr>
                                     </div>
                                     <div class="w3-container">
-            <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
+            <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning, Bellevue College		
               </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
                         <p>Decision Tree Learning System to Evaluate Loan Applicants</p>
@@ -229,7 +229,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                           <hr>
                         </div>
                         <div class="w3-container">
-             <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning		
+             <h5 class="w3-opacity"><b>Course: CS 460 Machine Learning, Bellevue College			
               </b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - December 2018</h6>
                         <p>Artificial Nueral Network to recognize Handwritten digits </p>
@@ -239,7 +239,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                           <hr>
                         </div>
    <div class="w3-container">
-          <h5 class="w3-opacity"><b>Course: CS 481 Senior Capstone		
+          <h5 class="w3-opacity"><b>Course: CS 481 Senior Capstone, Bellevue College			
 </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Road Trip Advisor</p>
@@ -366,12 +366,10 @@ Social Network based recommendation system for last.fm
 	<a href="https://github.com/shailahirji"
 		       <i class="fa fa-github w3-hover-opacity" aria-hidden="true"></i>		
   </a>
-  <a href class="https://github.com/shailahirji"
-    <i class="fa fa-github w3-hover-opacity" aria-hidden="true"></i> 
+	<a href="https://linkedin.com/in/shaila-hirji-443505b0/"
+		       <i class="fa fa-linkedin w3-hover-opacity" aria-hidden="true"></i>		
   </a>
-  <a href class="link"= "www.linkedin.com/in/shaila-hirji-443505b0">
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </a>
+
  
   <!--<p>Powered by <a target="_blank">Shaila Hirji</a></p> -->
 </footer>
